--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
     justify-content: space-between;
 }
 
-.metrics-card-body {
+/* .metrics-card-body {
     overflow-y: scroll;
     height: 30rem;
-}
+} */
